--- a/roles/install-sonar/templates/sonar.properties.j2
+++ b/roles/install-sonar/templates/sonar.properties.j2
@@ -1,3 +1,8 @@
 {{ ansible_managed | comment }}
 
+sonar.jdbc.username=sonar
+sonar.jdbc.password=sonar
+sonar.jdbc.url=jdbc:mysql://localhost:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance
+sonar.web.context=
+
 {{ sonarqube_config__custom | encode_ini }}
